Update application base